<resources>
    <string name="app_name">CVM Tools</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_a_task">Select a task</string>
    <string name="row_vine_count">Row Vine Count</string>
    <string name="vineyard">Vineyard</string>
    <string name="block">Block</string>
    <string name="blocks">Blocks</string>
    <string name="vineyard_block">{vineyard} - Block {block}</string>
    <string name="rows">Rows</string>
    <string name="row_number">Row number</string>
    <string name="count">Count</string>
    <string name="row">Row</string>
    <string name="row_count">#%s %s cnt</string>
    <string name="row_hashtag">#%s</string>
    <string name="count_vines">%s vines</string>
    <string name="save">Save</string>
    <string name="upload">Upload</string>
    <string name="share">Share</string>

    <plurals name="numberOfVineCounts">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d vine</item>
        <item quantity="other">%d vines</item>
    </plurals>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_wait">Please wait...</string>
    <string name="type">Type</string>
    <string name="product">Product</string>
    <string name="application_date_is">Application date is %s</string>
    <string name="tank_size">Tank Size</string>
    <string name="tanks">Tanks</string>
    <string name="special_instructions">Special Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="crop_disease_labeling">Crop Disease Labeling</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="generate_work_order">Generate Work Order</string>
    <string name="select_image">Select Image</string>
</resources>