<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/selectTaskFragment">
    <fragment
        android:id="@+id/selectTaskFragment"
        android:name="com.example.cvmtools.fragment.SelectTaskFragment"
        android:label="CVM Tools"
        tools:layout="@layout/fragment_first" >
        <action
            android:id="@+id/action_selectTaskFragment_to_rowVineCountFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:destination="@id/rowVineCountFragment" />
        <action
            android:id="@+id/action_selectTaskFragment_to_workOrderOptionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:destination="@id/workOrderOptionsFragment" />
        <action
            android:id="@+id/action_selectTaskFragment_to_vehicleChecklistFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:destination="@id/vehicleChecklistFragment" />
        <action
            android:id="@+id/action_selectTaskFragment_to_diseaseImageLabelingFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:destination="@id/diseaseImageLabelingFragment" />
    </fragment>
    <fragment
        android:id="@+id/rowVineCountFragment"
        android:name="com.example.cvmtools.fragment.RowVineCountFragment"
        android:label="Row Vine Count"
        tools:layout="@layout/fragment_second" >
        <action
            android:id="@+id/action_rowVineCountFragment_to_selectTaskFragment"
            app:destination="@id/selectTaskFragment"
            app:popUpTo="@id/selectTaskFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_rowVineCountFragment_to_editRowVineCountFragment"
            app:destination="@id/editRowVineCountFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"/>
    </fragment>
    <fragment
        android:id="@+id/editRowVineCountFragment"
        android:name="com.example.cvmtools.fragment.EditRowVineCountFragment"
        android:label="@string/vineyard_block"
        tools:layout="@layout/fragment_edit_row_vine_count">
        <argument
            android:name="vineyard"
            app:argType="string" />
        <argument
            android:name="block"
            app:argType="string" />
        <action
            android:id="@+id/action_editRowVineCountFragment_to_rowVineCountFragment"
            app:destination="@id/rowVineCountFragment"
            app:popUpTo="@id/rowVineCountFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/workOrderOptionsFragment"
        android:name="com.example.cvmtools.fragment.WorkOrderOptionsFragment"
        android:label="Work Order"
        tools:layout="@layout/fragment_work_order_options" />
    <fragment
        android:id="@+id/vehicleChecklistFragment"
        android:name="com.example.cvmtools.fragment.VehicleChecklistFragment"
        android:label="@string/vehicle_inspection"
        tools:layout="@layout/fragment_vehicle_checklist" />
    <fragment
        android:id="@+id/diseaseImageLabelingFragment"
        android:name="com.example.cvmtools.fragment.DiseaseImageLabelingFragment"
        android:label="@string/crop_disease_labeling"
        tools:layout="@layout/fragment_disease_image_labeling" />
</navigation>